--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </section>
 
         <section id="network-info">
-            <h2>Network Info</h2>
+            <h2>Network and Location Info</h2>
             <div class="grid-container">
                 <div class="card" id="ip">
                     <h3>Public IP Address</h3>
@@ -89,8 +89,24 @@
                     <h3>Approximate Location</h3>
                     <div class="data">Loading...</div>
                 </div>
-                <div class="card" id="network-type">
-                    <h3>Network Type</h3>
+
+                <div class="card" id="zip-code">
+                    <h3>Zip Code</h3>
+                    <div class="data">Loading...</div>
+                </div>
+
+                <div class="card" id="location-coordinates">
+                    <h3>Coordinates</h3>
+                    <div class="data">Loading...</div>
+                </div>
+
+                <div class="card" id="isp">
+                    <h3>Internet Service Provider</h3>
+                    <div class="data">Loading...</div>
+                </div>
+
+                <div class="card" id="organization">
+                    <h3>Organization</h3>
                     <div class="data">Loading...</div>
                 </div>
             </div>
@@ -130,7 +146,7 @@
             </div>
         </section>
 
-        <section id="all-logs" class="all-logs">
+        <section id="all-logs">
             <h2>All Logs</h2>
             <div class="logs-container">
                 <div class="log-section">
