--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
                     <h3>Public IP Address</h3>
                     <div class="data">Loading...</div>
                 </div>
+                <div class="card" id="version">
+                    <h3>IP version</h3>
+                    <div class="data">Loading...</div>
+                </div>
                 <div class="card" id="geolocation">
                     <h3>Approximate Location</h3>
                     <div class="data">Loading...</div>
@@ -109,6 +113,7 @@
                     <h3>Organization</h3>
                     <div class="data">Loading...</div>
                 </div>
+
             </div>
         </section>
 
