--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
                     <h3>Text Selection</h3>
                     <div class="data">Nothing selected</div>
                 </div>
+                <!-- Having two IDs here doesn't seem clean-->
                 <div class="card" id="mouse">
                     <h3>Mouse Activity</h3>
-                    <div class="data">Position: X: 0, Y: 0</div>
-                    <div class="data">Last click: None</div>
+                    <div class="data" id="mouse-position">Position: X: 0, Y: 0</div>
+                    <div class="data" id="mouse-click">Last click: None</div>
                 </div>
                 <div class="card" id="keyboard">
                     <h3>Keyboard Input</h3>
